static/window/styles/core.css
/* ... */
.game-list__no-games__title {
  font-size: 1.5rem;
}
/* GameList Header */
.game-list-header {
  display: flex;
  width: 100%;
}
.game-list-header__right {
  display: flex;
  width: 100%;
}
.game-list-header__scroll-fill {
  width: 1rem;
}
/* GameList Header Column */
.game-list-header-column {
  display: inline-flex;
  width: 100%;
}
.game-list-header-column__title {
  font-size: calc(0.45 * 1px * var(--height));
  font-weight: bold;
  flex: 1 1 auto;
  overflow: hidden;
  user-select: none;
  padding-left: 0.2rem;
}
.game-list-header-column__divider {
  width: 2px;
  height: auto;
}
.game-list-header-column--title,
.game-list-item__field--title {
  max-width: 26%;
}
.game-list-header-column--note,
.game-list-item__field--note {
  max-width: 4%;
  text-align: center;
}
.game-list-header-column--icons,
.game-list-item__field--icons {
  max-width: 5%;
  text-align: center;
}
.game-list-header-column--tags,
.game-list-item__field--tags {
  max-width: 22%;
}
.game-list-header-column--developer,
.game-list-item__field--developer {
  max-width: 19%;
}
.game-list-header-column--publisher,
.game-list-item__field--publisher {
  max-width: 19%;
}

.game-list-header-column--releaseYear,
.game-list-item__field--releaseYear {
  max-width: 5%;
}

/* GameGrid */
/* GameGrid Item */
.game-grid-item {
  width: calc(1px * var(--width));
  height: calc(1px * var(--height));
  list-style: none;
}
.game-grid-item:hover {
  cursor: pointer;
}
.game-grid-item--dragged {
  opacity: 0.4;
}
/* GameGrid Item Thumb */
.game-grid-item__thumb {
  padding: calc(var(--width) * 0.0025rem);
  width: calc(var(--width) * 1px);
  height: calc(var(--height) * 0.8px);
}
.game-grid-item__thumb__image {
  width: 100%;
  height: 100%;
  position: relative;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: 1px solid;
}

.game-grid-item__thumb--installed {
  outline: 1px solid #888;
}

.game-grid-item__thumb__icons {
  width: 100%;
  padding: calc(0.001rem * var(--width));
  position: absolute;
  bottom: 0;
}
.game-grid-item__thumb__icons__icon {
  width: calc(0.144px * var(--width));
  height: calc(0.144px * var(--width));
  float: right;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
/* GameGrid Item Music Badge */
/* GameGrid Item Badges Row */
.game-grid-item__badges {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  pointer-events: none;
}
.game-grid-item__music-badge {
  font-size: calc(0.17px * var(--width));
  padding: 0.05em 0.1em;
  opacity: 0.8;
  color: var(--layout__game-item-background-selected);
}
/* GameGrid Item Favorite Badge */
.game-grid-item__favorite-badge {
  font-size: calc(0.082px * var(--width));
  padding: 0.1em;
  opacity: 0.9;
  color: #e05050;
}
/* GameGrid Item Title */
.game-grid-item__title {
  padding: calc(var(--width) * 0.001rem);
  height: calc((var(--height) - var(--width)) * 0.001rem);
  text-align: center;
}
.game-grid-item__title__text {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: calc((10 / 188) * var(--height) * 1px);
  line-height: 1.2;
  word-break: break-word;
  /* Pimp */
  font-weight: bold;
  user-select: none;
}

.game-grid-item__title__text--installed {
  color: #EEE !important;
}
/* GameGrid NoGames */
.game-grid__no-games {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.game-grid__no-games__title {
  font-size: 2em;
}



/* ------ Playlist ------ */
.playlist-list__message {
  padding: 1rem;
  text-align: center;
}
.playlist-list__message h2 {
  margin-bottom: 0.2rem;
}

/* PlaylistList */
.playlist-list {
  --image-size: 1.45rem; /* Width & Height of the icon in the playlist item head */
  --image-padding: 0.15rem; /* Padding of the playlist item head */
}
/* Playlist-List-Item */
.playlist-list-item--editing p {
  user-select: none; /* Can not select text while editing is enabled */
}
.playlist-list-item--drag-over {
  position: relative;
}
.playlist-list-item--drag-over .playlist-list-item__drag-overlay {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  border: 2px dashed;
}
/* Playlist-List-Item Head */
.playlist-list-item__head {
  display: flex;
  height: calc(var(--image-size) + var(--image-padding) * 2);
  padding: var(--image-padding);
  padding-left: 0.3rem;
  cursor: pointer;
  overflow: hidden;
}
.playlist-list-item--editing .playlist-list-item__head {
  cursor: default;
}
.playlist-list-item__head > * {
  user-select: none;
}
.playlist-list-item__icon {
  flex: 0 0 auto;
  width: var(--image-size);
  height: var(--image-size);
}
.playlist-list-item__icon-image {
  width: 100%;
  height: 100%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.playlist-list-item__icon-placeholder {
  height: 65%;
}
.playlist-list-item__icon-placeholder-inner {
  width: 100%;
  height: 100%;
}
.playlist-list-item__title {
  flex: 0 1 auto;
  min-width: 0;
  font-size: 0.9em;
  padding-left: 0.5rem;
}
.playlist-list-item--selected .playlist-list-item__title {
  font-weight: bold;
}
.playlist-list-item__divider {
  flex: 0 0 auto;
  padding: 0 0.2rem;
  font-size: 0.9em;
}
.playlist-list-item__author {
  flex: 0 1 auto;
  min-width: 0;
  font-size: 0.9em;
  font-style: italic;
}
.playlist-list-item__author > p {
  padding-right: 0.2em; /* Give it some extra space since its in italics */
}
.playlist-list-item__text-field {
  /* Truncates the overflowing text */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.playlist-list-item--editing .playlist-list-item__title,
.playlist-list-item--editing .playlist-list-item__author {
  flex: 1 1 auto;
}
/* ... */

